{
  "version": 4,
  "terraform_version": "0.12.15",
  "serial": 30,
  "lineage": "8c43cabc-207a-3764-743a-3f1c7a0ce78e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins_V2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02df9ea15c1778c9c",
            "arn": "arn:aws:ec2:eu-west-1:216220152523:instance/i-028f9276f02221d8d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-028f9276f02221d8d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_terraform",
            "monitoring": false,
            "primary_network_interface_id": "eni-0dfeebe030d745461",
            "private_dns": "ip-172-31-31-98.eu-west-1.compute.internal",
            "private_ip": "172.31.31.98",
            "public_dns": "ec2-3-248-191-205.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.248.191.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08f6a16ce345ff0d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_ssh",
              "nginx_jenkins_port"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6ff7d227",
            "tags": {
              "Name": "Jenkins-server_V2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-001419ae92d20a73c",
              "sg-0cd1c3de26dc76a24"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_security_group.nginx_jenkins_port"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216220152523:security-group/sg-001419ae92d20a73c",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-001419ae92d20a73c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": null,
            "owner_id": "216220152523",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-61061e07"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_jenkins_port",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216220152523:security-group/sg-0cd1c3de26dc76a24",
            "description": "Open Nginx and Jenkins to all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0cd1c3de26dc76a24",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_jenkins_port",
            "name_prefix": null,
            "owner_id": "216220152523",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx_jenkins_port"
            },
            "timeouts": null,
            "vpc_id": "vpc-61061e07"
          }
        }
      ]
    }
  ]
}